--- a/ldsw_utilizcacion_de_widgets/pubspec.yaml
+++ b/ldsw_utilizcacion_de_widgets/pubspec.yaml
@@ -27,8 +27,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  http: ^0.13.4
+  cached_network_image: ^3.2.0
   flutter:
     sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
